bazel_dep(name = "rules_jvm_external", version = "6.2")

maven_ext = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven_ext.install(
    name = "maven2",
    artifacts = [
        "org.apache.commons:commons-collections4:4.4",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven_ext, "maven2")
