bazel_dep(name = "rules_jvm_external", version = "6.2")

maven_ext = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven_ext.install(
    name = "maven2",
    artifacts = [
	"com.codahale.metrics:metrics-core:3.0.2",
	"org.bitcoinj:bitcoinj-core:0.14.7",
	"org.simpleframework:simple-http:6.0.1",
	"org.slf4j:slf4j-simple:1.7.5",
        "org.apache.commons:commons-collections4:4.4",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven_ext, "maven2")
