## Remember Java ##
###################

# Already implicit?
#bazel_dep(name = "protobuf", version = "28.0-rc2")
#bazel_dep(name = "grpc", version = "1.66.0.bcr.2")
#bazel_dep(name = "rules_proto_grpc", version = "5.0.0")
#bazel_dep(name = "grpc-java", version = "1.67.1")

bazel_dep(name = "rules_jvm_external", version = "6.2")


## Maven

maven_ext = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven_ext.install(
    name = "maven2",
    artifacts = [
        "com.codahale.metrics:metrics-core:3.0.2",
        "com.googlecode.lanterna:lanterna:3.1.2",
        "org.bitcoinj:bitcoinj-core:0.14.7",
        "org.openjdk.nashorn:nashorn-core:15.4",
        "org.simpleframework:simple-http:6.0.1",
        "org.slf4j:slf4j-simple:1.7.5",
        "org.sonatype.nexus:google-guava-eventbus:3.2.0-01",
        "org.apache.commons:commons-collections4:4.4",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven_ext, "maven2")
